--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <div class="container">
 
     <h1 id="hello">Say hello!</h1>
-    <p class="action"><a href="mailto:hello@jimthoburn.com">hello@jimthoburn.com</a></p>
+    <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
     <p>I’m available to help with projects in September &amp; October, 2017.</p>
 
     <section class="social">
