--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Style &amp; Code for the Web, by Jim Thoburn.</title>
+  <title>Style &amp; Code for the Web, by Jim Thoburn</title>
 
   <link rel="stylesheet" href="/ahoy.css" />
 
