--- a/projects/grand-park.html
+++ b/projects/grand-park.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <meta property="og:image" content="/images/ship-240-240-240.png" />
+
   <title>4th of July at Grand Park</title>
 
   <link rel="stylesheet" href="/ahoy.css" />
 
   <!-- for general use -->
-  <link rel="icon" type="image/png"    href="/images/anchor.png" />
+  <link rel="icon" type="image/png"    href="/images/helm.png" />
 
   <!-- for iOS -->
   <link rel="apple-touch-icon"         href="/images/ship-240-240-240.png" />
