--- a/index.html
+++ b/index.html
@@ -1,26 +1,9 @@
-<!doctype html>
-<html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <meta property="og:image" content="/images/ship-240-240-240.png" />
-
-  <title>Style &amp; Code for the Web, by Jim Thoburn</title>
-
-  <link rel="stylesheet" href="/ahoy.css" />
-
-  <!-- for general use -->
-  <link rel="icon" type="image/png"    href="/images/helm.png" />
-
-  <!-- for iOS -->
-  <link rel="apple-touch-icon"         href="/images/ship-240-240-240.png" />
-
-  <!-- for Windows 8 -->
-  <meta name="msapplication-TileImage" content="/images/ship.png" />
-  <meta name="msapplication-TileColor" content="rgb(240, 240, 240)" />
-</head>
-<body class="home">
+---
+layout: default
+title: Style & Code for the Web, by Jim Thoburn
+class: home
+---
+<!-- 🌩 🐻 -->
 
   <div class="container">
 
@@ -192,6 +175,3 @@
 
     </section>
   </div>
-
-</body>
-</html>
