--- a/projects/grand-park.html
+++ b/projects/grand-park.html
@@ -1,26 +1,7 @@
-<!doctype html>
-<html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <meta property="og:image" content="/images/ship-240-240-240.png" />
-
-  <title>4th of July at Grand Park</title>
-
-  <link rel="stylesheet" href="/ahoy.css" />
-
-  <!-- for general use -->
-  <link rel="icon" type="image/png"    href="/images/helm.png" />
-
-  <!-- for iOS -->
-  <link rel="apple-touch-icon"         href="/images/ship-240-240-240.png" />
-
-  <!-- for Windows 8 -->
-  <meta name="msapplication-TileImage" content="/images/ship.png" />
-  <meta name="msapplication-TileColor" content="rgb(240, 240, 240)" />
-</head>
-<body>
+---
+layout: default
+title: 4th of July at Grand Park
+---
 
   <a href="/" class="ahoy">
     <svg width="100" height="76" viewBox="0 0 100 75.985">
@@ -118,6 +99,3 @@
       <p>with the teams at Kiva and <span style="display: inline-block">GOOD Worldwide</span></p>
     </div>
   </a>
-
-</body>
-</html>
