--- a/projects/jj-burns.html
+++ b/projects/jj-burns.html
@@ -1,35 +1,7 @@
-<!doctype html>
-<html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <meta property="og:image" content="/images/ship-240-240-240.png" />
-
-  <title>JJ Burns</title>
-
-  <link rel="stylesheet" href="/ahoy.css" />
-
-  <!-- for general use -->
-  <link rel="icon" type="image/png"    href="/images/helm.png" />
-
-  <!-- for iOS -->
-  <link rel="apple-touch-icon"         href="/images/ship-240-240-240.png" />
-
-  <!-- for Windows 8 -->
-  <meta name="msapplication-TileImage" content="/images/ship.png" />
-  <meta name="msapplication-TileColor" content="rgb(240, 240, 240)" />
-
-  <style>
-    @media (min-width: 25em) {
-      .container > div {
-        display: block;
-        width: auto;
-      }
-    }
-  </style>
-</head>
-<body>
+---
+layout: default
+title: JJ Burns
+---
 
   <a href="/" class="ahoy">
     <svg width="100" height="76" viewBox="0 0 100 75.985">
@@ -113,5 +85,3 @@
       <p>with the team at <span style="display: inline-block">Fahrenheit Studio</span></p>
     </div>
   </a>
-</body>
-</html>
