--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Style & Code for the Web, by Jim Thoburn
+title: Jim Thoburn
+beta_title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
 class: home
 ---
-<!-- 🌩 🐻 -->
 
   <div class="container">
 
