Tweak home page content.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ class: home
     </svg>
 
     <h1>Ahoy there!</h1>
-    <p>I’m Jim, an independent front end developer, living in Los&nbsp;Angeles.<!-- I work with <em>designers</em>, <em>business owners</em> and <em>web teams</em> to make products that are pleasing to users, practical to maintain, and accessible to anyone.--></p>
+    <p>I’m Jim, a front end web developer, living in Los&nbsp;Angeles.<!-- I work with <em>designers</em>, <em>business owners</em> and <em>web teams</em> to make products that are pleasing to users, practical to maintain, and accessible to anyone.--></p>
 
     <!--
     <ul class="action">
@@ -162,7 +162,7 @@ class: home
 
     <h1 id="hello">Say hello!</h1>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
-    <p>I’m available to help with projects in September &amp; October, 2017.</p>
+    <p>I’m available to help on a project or join a team, this fall 🍂🍁</p>
 
     <section class="social">
 
