Make project URLs shorter.

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -140,7 +140,7 @@ title: CTZN App
 
   </div>
 
-  <a href="/projects/good-community" class="banner" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: 2% 50%;">
+  <a href="/good-community" class="banner" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: 2% 50%;">
     <div>
       <h2>Next project →</h2>
     </div>
