--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: JJ Burns
+title: Fahrenheit Studio
 ---
 
   <a href="/" class="ahoy">
@@ -10,21 +10,21 @@ title: JJ Burns
     <h2>Ahoy there! <span>I’m Jim</span>.</h2>
   </a>
 
-  <div class="banner" style="background-image: url(/images/projects/jj-burns.jpg); background-position: left;">
+  <div class="banner" style="background-image: url(/images/projects/fahrenheit.jpg); background-position: 25% 50%;">
     <div>
-      <h1>JJ Burns &amp; Company</h1>
+      <h1>Fahrenheit Studio</h1>
       <p>with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
   </div>
 
   <div class="container">
-    <p>JJ Burns provides financial services to a broad range of clients, from endowments to professional athletes. Their aging desktop-oriented website needed a redesign.</p>
-    <p>I worked alongside Dylan, our designer, to create responsive prototypes that expressed a new content structure and visual look for the website. Along the way, I created a <a href="http://jjburns.com/assets/html/patterns/">pattern library</a>, and I found out that <a href="#robert">Robert</a> is an excellent cook.</p>
+
+    <p>Fahrenheit Studio has been helping companies express their brand since 1995. Their beautiful, desktop-oriented website needed a redesign.</p>
+    <p>I worked alongside Dylan, Fahrenheit’s designer, to create responsive prototypes. Together we made a new <a href="http://www.fahrenheit.com/work/">portfolio</a> with larger images, appropriate for retina displays and big screens. I also found out that <a href="#robert">Robert</a> is an excellent guitar player.</p>
 
     <h2>Visit the project</h2>
     <ul class="action">
-      <li><a href="http://jjburns.com">JJ Burns &amp; Company</a></li>
-      <li><a href="http://jjburns.com/assets/html/patterns/">Pattern library</a></li>
+      <li><a href="http://fahrenheit.com">Fahrenheit Studio</a></li>
     </ul>
 
     <h2>Crew</h2>
@@ -41,14 +41,10 @@ title: JJ Burns
       <h3>Marketing Strategy</h3>
       <p><a href="http://www.fahrenheit.com/who/robert-weitz/">Robert Weitz</a></p>
     </div>
-    <div>
-      <h3>CMS Integration</h3>
-      <p><a href="https://barrelstrengthdesign.com">Ben Parizek</a></p>
-    </div>
 
     <figure id="robert">
-      <img src="/images/projects/jj-burns-cook.jpg" width="600" alt="Robert serving dinner to the production team" />
-      <figcaption>Robert serving dinner to the production team</figcaption>
+      <img src="/images/projects/fahrenheit-guitar.jpg" width="600" alt="Robert serenading me, as I work on the style sheets" />
+      <figcaption>Robert serenading me, as I work on the style sheets</figcaption>
     </figure>
 
     <h2>Tools we used</h2>
@@ -63,8 +59,8 @@ title: JJ Burns
       </ul>
     </div>
     <div>
-      <h3>Server-Side Templates &amp; CMS</h3>
-      <p><a href="https://ellislab.com/expressionengine">ExpressionEngine</a></p>
+      <h3>Server-Side Templates</h3>
+      <p><a href="http://php.net">PHP</a></p>
     </div>
     <div>
       <h3>Workflow</h3>
@@ -73,15 +69,19 @@ title: JJ Burns
         <li><a href="http://beanstalkapp.com">Beanstalk</a></li>
       </ul>
     </div>
+    <div>
+      <h3>Web Hosting</h3>
+      <p><a href="https://mediatemple.net">Media Temple</a></p>
+    </div>
 
   </div>
 
-  <a href="/projects/fahrenheit" class="banner" style="background-image: url(/images/projects/fahrenheit.jpg)">
+  <a href="/good-fest" class="banner" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
-      <h1>Fahrenheit Studio</h1>
-      <p>with the team at <span style="display: inline-block">Fahrenheit Studio</span></p>
+      <h1>GOOD Fest</h1>
+      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
     </div>
   </a>
