--- a/good-community.html
+++ b/good-community.html
@@ -110,7 +110,7 @@ title: GOOD Community
 
   </div>
 
-  <a href="/projects/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store.jpg)">
+  <a href="/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store.jpg)">
     <div>
       <h2>Next project →</h2>
     </div>
