--- a/good-fest.html
+++ b/good-fest.html
@@ -162,7 +162,7 @@ title: GOOD Fest
 
   </div>
 
-  <a href="/projects/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
+  <a href="/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
     <div>
       <h2>Next project →</h2>
     </div>
