--- a/good.html
+++ b/good.html
@@ -94,7 +94,7 @@ title: GOOD Worldwide
 
   </div>
 
-  <a href="/projects/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis.jpg);">
+  <a href="/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis.jpg);">
     <div>
       <h2>Next project →</h2>
     </div>
