--- a/grand-park.html
+++ b/grand-park.html
@@ -90,7 +90,7 @@ title: 4th of July at Grand Park
 
   </div>
 
-  <a href="/projects/kiva" class="banner" style="background-image: url(/images/projects/1-hW4eUha20IP4hfd0z5uoDg.jpeg)">
+  <a href="/kiva" class="banner" style="background-image: url(/images/projects/1-hW4eUha20IP4hfd0z5uoDg.jpeg)">
     <div>
       <h2>Next project →</h2>
     </div>
