--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@ class: home
     <h2>Example projects</h2>
   </div>
 
-  <a href="/projects/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png);">
+  <a href="/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png);">
     <div>
       <h3>GOOD Fest</h3>
       <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
     </div>
   </a>
 
-  <a href="/projects/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
+  <a href="/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
     <div>
       <h3>4th of July at <span style="display: inline-block">Grand Park</span></h3>
       <p>with the team at <span style="display: inline-block">The Music Center</span></p>
     </div>
   </a>
 
-  <a href="/projects/kiva" class="banner" style="background-image: url(/images/projects/kiva-timeline.png);">
+  <a href="/kiva" class="banner" style="background-image: url(/images/projects/kiva-timeline.png);">
     <div>
       <h3>10 Days of Lending</h3>
       <p>with the teams at Kiva and <span style="display: inline-block">GOOD Worldwide</span></p>
     </div>
   </a>
 
-  <a href="/projects/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
+  <a href="/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
     <div>
       <h3>GOOD Worldwide</h3>
       <p>with the teams at <span style="display: inline-block">Type/Code</span> and <span style="display: inline-block">GOOD Worldwide</span></p>
     </div>
   </a>
 
-  <a href="/projects/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis-map.png);">
+  <a href="/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis-map.png);">
     <div>
       <h3>Food Oasis <span style="display: inline-block">Los Angeles</span></h3>
       <p>with the volunteers at <span style="display: inline-block">Code for America</span></p>
     </div>
   </a>
 
-  <a href="/projects/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
+  <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
     <div>
       <h3>CTZN App</h3>
       <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
@@ -79,28 +79,28 @@ class: home
   </a>
   -->
 
-  <a href="/projects/good-community" class="banner" style="background-image: url(/images/projects/good-community-wide-cropped.png); background-position: -500px 50%;">
+  <a href="/good-community" class="banner" style="background-image: url(/images/projects/good-community-wide-cropped.png); background-position: -500px 50%;">
     <div>
       <h3>GOOD Community</h3>
       <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
     </div>
   </a>
 
-  <a href="/projects/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store-pencils.jpg)">
+  <a href="/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store-pencils.jpg)">
     <div>
       <h3>OK the Store</h3>
       <p>with the team at <span style="display: inline-block">Barrel Strength Design</span></p>
     </div>
   </a>
 
-  <a href="/projects/jj-burns" class="banner" style="background-image: url(/images/projects/fahrenheit-jjburns.jpg); background-position: 2% 50%;">
+  <a href="/jj-burns" class="banner" style="background-image: url(/images/projects/fahrenheit-jjburns.jpg); background-position: 2% 50%;">
     <div>
       <h3>JJ Burns &amp; Company</h3>
       <p>with the team at <span style="display: inline-block">Fahrenheit Studio</span></p>
     </div>
   </a>
 
-  <a href="/projects/fahrenheit" class="banner" style="background-image: url(/images/projects/fahrenheit-zansaar.jpg)">
+  <a href="/fahrenheit" class="banner" style="background-image: url(/images/projects/fahrenheit-zansaar.jpg)">
     <div>
       <h3>Fahrenheit Studio</h3>
       <p>with the team at <span style="display: inline-block">Fahrenheit Studio</span></p>
