--- a/kiva.html
+++ b/kiva.html
@@ -70,7 +70,7 @@ title: 10 Days of Lending
 
   </div>
 
-  <a href="/projects/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg); background-size: cover; background-position: 50% 50%;">
+  <a href="/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg); background-size: cover; background-position: 50% 50%;">
     <div>
       <h2>Next project →</h2>
     </div>
