--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -79,7 +79,7 @@ title: OK the Store
 
   </div>
 
-  <a href="/projects/jj-burns" class="banner" style="background-image: url(/images/projects/jj-burns.jpg)">
+  <a href="/jj-burns" class="banner" style="background-image: url(/images/projects/jj-burns.jpg)">
     <div>
       <h2>Next project →</h2>
     </div>
