Fix margins on small screens.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
-title: Jim Thoburn
-beta_title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
+title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
 class: home
 ---
 
@@ -162,7 +161,7 @@ class: home
 
     <h1 id="hello">Say hello!</h1>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
-    <p>I’m available to help on a project or join a team, this fall 🍂🍁</p>
+    <p>You can hire me! I’m available to help on a web project or join a team, this fall. 🍃🍂🍁</p>
 
     <section class="social">
 
