Tweak home page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
+title: Style & Code for the Web, by Jim Thoburn
+beta_title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
 class: home
 ---
 
@@ -11,7 +12,7 @@ class: home
     </svg>
 
     <h1>Ahoy there!</h1>
-    <p>I’m Jim, a front end web developer, living in Los&nbsp;Angeles.<!-- I work with <em>designers</em>, <em>business owners</em> and <em>web teams</em> to make products that are pleasing to users, practical to maintain, and accessible to anyone.--></p>
+    <p>I’m Jim, an indie front end developer, living in Los&nbsp;Angeles.<!-- I work with <em>designers</em>, <em>business owners</em> and <em>web teams</em> to make products that are pleasing to users, practical to maintain, and accessible to anyone.--></p>
 
     <!--
     <ul class="action">
@@ -161,7 +162,7 @@ class: home
 
     <h1 id="hello">Say hello!</h1>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
-    <p>You can hire me! I’m available to help on a web project or join a team, this fall. 🍃🍂🍁</p>
+    <p>I’m available to help on a web project or join a team, this fall. 🍃🍂🍁</p>
 
     <section class="social">
 
