Add more case study images.

--- a/good.html
+++ b/good.html
@@ -32,6 +32,36 @@ title: GOOD Worldwide
       <li><a href="https://jimthoburn.github.io/goodinc-ui/build/">Pattern Library</a></li>
     </ul>
 
+    <figure>
+      <a href="http://www.goodinc.com/project/the_levi_strauss__co_collaboratory_"><img src="/images/good/Screen Shot 2017-08-20 at 4.24.51 AM.png" width="500" alt="The Levi Strauss & Co. Collaboratory" /></a>
+      <!--
+      <a href="http://www.goodinc.com/project/the_big_impact_of_small_loans"><img src="/images/good/Screen Shot 2017-08-20 at 4.22.13 AM.png" width="500" alt="The Big Impact of Small Loans" /></a>
+      -->
+      <a href="http://www.goodinc.com/project/goodfest"><img src="/images/good/Screen Shot 2017-08-20 at 4.23.10 AM.png" width="500" alt="GOOD Fest" /></a>
+      <!--
+      <img src="/images/good/Screen Shot 2017-08-20 at 4.23.19 AM.png" width="500" alt="" />
+      <img src="/images/good/Screen Shot 2017-08-20 at 4.24.29 AM.png" width="500" alt="" />
+      -->
+      <a href="http://www.goodinc.com/news"><img src="/images/good/Screen Shot 2017-08-20 at 4.30.16 AM.png" width="500" alt="GOOD Blog" /></a>
+      <!--
+      <img src="/images/good/Screen Shot 2017-08-20 at 4.31.10 AM.png" width="500" alt="" />
+      <a href="http://www.goodinc.com/community/audience"><img src="/images/good/Screen Shot 2017-08-20 at 4.20.05 AM.png" width="500" alt="GOOD Audience" /></a>
+
+
+      -->
+      <!--
+      <img src="/images/good/Screen Shot 2017-08-20 at 4.33.10 AM.png" width="500" alt="" />
+      <img src="/images/good/Screen Shot 2017-08-20 at 4.33.31 AM.png" width="500" alt="" />
+      -->
+      <a href="http://www.goodinc.com/about/history"><img src="/images/good/Screen Shot 2017-08-20 at 4.17.45 AM.png" width="500" alt="History of GOOD" /></a>
+      <a href="https://jimthoburn.github.io/goodinc-ui/build/"><img src="/images/good/Screen Shot 2017-08-24 at 1.13.26 PM.png" width="500" alt="Pattern Library" /></a>
+      <a href="http://www.goodinc.com/community/team"><img src="/images/good/Screen Shot 2017-08-20 at 4.18.03 AM.png" width="500" alt="GOOD Team" /></a>
+      <!--
+      <a href="http://www.goodinc.com/community/team/marchela_iahdjian"><img src="/images/good/Screen Shot 2017-08-20 at 4.18.35 AM.png" width="500" alt="GOOD Team Member" /></a>
+      -->
+      <a href="https://jimthoburn.github.io/goodinc-ui/build/"><img src="/images/good/team-pattern.png" width="500" alt="Pattern Library" /></a>
+    </figure>
+
     <h2>Crew</h2>
 
     <div>
