--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ class: home
     </ul>
     -->
 
-    <p>Are you a designer, a business owner, or a member of a web team who needs help making a user interface? I can assist with <a href="#services">prototypes</a>, <a href="#services" style="display: inline-block">responsive design</a> &amp; <span style="display: inline-block"><a href="#services">reusable patterns</a>.</span></p>
+    <p>If you’re making a web site or application, <a href="#services">I can assist</a> with prototypes, responsive design, <span style="display: inline-block">reusable code</span>, accessbility, browser compatibility, testing, and more!</span> <a href="#hello" style="display: inline-block">You can hire me.</a></p>
 
     <p class="action hello"><a href="#hello">Say hello</a></p>
 
