--- a/good-fest.html
+++ b/good-fest.html
@@ -25,6 +25,13 @@ title: GOOD Fest
 
     <p>At the end of the festival, we created promotions for <a href="https://www.good.is/articles/goodfest-announcement-concert">GOOD Magazine</a> and a <a href="https://goodfest.good.is/featured-video/goodfest">video archive</a> of the shows.</p>
 
+    <h2>Visit the project</h2>
+
+    <ul class="action">
+      <li><a href="https://goodfest.good.is">GOOD Fest</a></li>
+      <li><a href="https://goodfest.good.is/featured-video/goodfest">Video Archive</a></li>
+    </ul>
+
     <!--
     <div style="margin: 3em calc(-50vw + 16.5em); box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25); background-image: url(/images/screenshots/goodfest-2.png);"></div>
 
@@ -33,12 +40,29 @@ title: GOOD Fest
     <img src="/images/screenshots/video-archive.png" style="max-width: 100%;  margin: 3em auto;  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25)" alt="" />
     -->
 
-    <h2>Visit the project</h2>
-
-    <ul class="action">
-      <li><a href="https://goodfest.good.is">GOOD Fest</a></li>
-      <li><a href="https://goodfest.good.is/featured-video/goodfest">Video Archive</a></li>
-    </ul>
+    <figure>
+      <!--
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.27 AM.png" width="500" alt="" />
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.34 AM.png" width="500" alt="" />
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.31 AM.png" width="500" alt="" />
+      -->
+      <!--
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.46 AM.png" width="500" alt="" />
+      -->
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.54 AM.png" width="500" alt="" />
+      <!--
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.59 AM.png" width="500" alt="" />
+      -->
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.23 AM.png" width="500" alt="" />
+      <!--
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.40.36 AM.png" width="500" alt="" />
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.40.55 AM.png" width="500" alt="" />
+      -->
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.35.02 AM.png" width="500" alt="" />
+      <!--
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.36.24 AM.png" width="500" alt="" />
+      -->
+    </figure>
 
     <h2>Crew</h2>
 
