--- a/grand-park.html
+++ b/grand-park.html
@@ -32,6 +32,31 @@ title: 4th of July at Grand Park
       <li><a href="https://github.com/grandparkla/july4">GitHub Project</a></li>
     </ul>
 
+    <figure>
+      <!--
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.08 AM.png" width="500" alt="" />
+      -->
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.26 AM.png" width="500" alt="" />
+      <!--
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.31 AM.png" width="500" alt="" />
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.43 AM.png" width="500" alt="" />
+      -->
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.48 AM.png" width="500" alt="" />
+      <!--
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.56 AM.png" width="500" alt="" />
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.46.24 AM.png" width="500" alt="" />
+      -->
+      <!--
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.46.16 AM.png" width="500" alt="" />
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.50.54 AM.png" width="500" alt="" />
+      -->
+      <!--
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.53.55 AM.png" width="500" alt="" />
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.54.08 AM.png" width="500" alt="" />
+      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.54.15 AM.png" width="500" alt="" />
+      -->
+    </figure>
+
     <h2>Crew</h2>
 
     <div>
