Tweak home page.

--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@ class: home
 
     <p>Ahoy there! I’m Jim.</p>
 
-    <h1>I speak <u>Design</u> &amp; <u>Engineering</u></h1>
+    <h1 style="line-height: 1.25;"><span style="font-size: 1em;">I speak</span> <b style="display: inline-block; padding: 0 0.25em; background: black; color: white;">Design</b> &amp; <b style="display: inline-block; padding: 0 0.25em; background: black; color: white;">Engineering</b></h1>
 
     <!--
+    <h1 style="line-height: 1.5;">I speak <b style="line-height: 1.25; border-radius: 0.25em; display: inline-block; padding: 0 0.25em; background: black; color: white;">Design</b> &amp; <b style="line-height: 1.25; border-radius: 0.25em; display: inline-block; padding: 0 0.25em; background: black; color: white;">Engineering</b></h1>
     <ul class="action">
       <li><a href="#process">Process</a></li>
       <li><a href="#services">Services</a></li>
     </ul>
     -->
 
-    <p>If you’re making a user interface for web site or application, I can assist with <span style="display: inline-block">responsive design</span>, <span style="display: inline-block">pattern libraries</span>, accessibility, performance, <a href="#services">and more</a>!</p>
+    <p>If you’re making a user interface for a web site or application, I can assist with <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a>, accessibility, performance, and more! Here are some examples…</p>
 
     <p class="action hello"><a href="#hello">Say hello</a></p>
-
-    <h2>Example projects</h2>
   </div>
 
   <a href="/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png);">
@@ -163,7 +162,7 @@ class: home
 
     <h1 id="hello">Say hello!</h1>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
-    <p>I’m available to help on a web project or join a team, this fall. 🍃🍂🍁</p>
+    <p>I’m available to help on a web project <!--(or join a team)--> in the fall &amp; winter, 2017. <!--🍃🍂🍁--></p>
 
     <section class="social">
 
