And… tweak home page.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@ class: home
       <use xlink:href="/images/ship.svg#ship"></use>
     </svg>
 
-    <p>Ahoy there! I’m Jim.</p>
+    <p>Ahoy there! I’m Jim, a user interface developer for the Web, living in Los Angeles.</p>
 
-    <h1 style="line-height: 1.25;"><span style="font-size: 1em;">I speak</span> <b style="display: inline-block; padding: 0 0.25em; background: black; color: white;">Design</b> &amp; <b style="display: inline-block; padding: 0 0.25em; background: black; color: white;">Engineering</b></h1>
+    <h1>I speak <span style="display: inline-block">design &amp; code</span></h1>
+
+    <!--
+    <p>As a member of a team, I can facilitate the process of moving an idea from a sketch to a finish product.</p>
+    -->
 
     <!--
     <h1 style="line-height: 1.5;">I speak <b style="line-height: 1.25; border-radius: 0.25em; display: inline-block; padding: 0 0.25em; background: black; color: white;">Design</b> &amp; <b style="line-height: 1.25; border-radius: 0.25em; display: inline-block; padding: 0 0.25em; background: black; color: white;">Engineering</b></h1>
@@ -23,7 +27,7 @@ class: home
     </ul>
     -->
 
-    <p>If you’re making a user interface for a web site or application, I can assist with <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a>, accessibility, performance, and more! Here are some examples…</p>
+    <p>If you’re making a web site or application, I can assist with <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a>, animation, accessibility, performance, and more! Here are some example projects…</p>
 
     <p class="action hello"><a href="#hello">Say hello</a></p>
   </div>
