--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ class: home
 
     <p>Ahoy there! I’m Jim, a user interface developer for the Web, living in Los Angeles.</p>
 
-    <h1>I speak <span style="display: inline-block">design &amp; code</span></h1>
+    <h1>I speak <span style="">design &amp; engineering</span></h1>
 
     <!--
     <p>As a member of a team, I can facilitate the process of moving an idea from a sketch to a finish product.</p>
