Add more screenshots to case studies.

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -44,6 +44,19 @@ title: CTZN App
       <li><a href="https://goodinc.github.io/ctzn-ui/build/">Pattern library</a></li>
     </ul>
 
+    <figure>
+      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.49.59 PM.png" width="500" alt="" />  
+      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.51.09 PM.png" width="500" alt="" />
+      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.51.30 PM.png" width="500" alt="" />
+      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.52.37 PM.png" width="500" alt="" />
+      <!--
+      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.52.47 PM.png" width="500" alt="" />
+      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.53.29 PM.png" width="500" alt="" />
+      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.55.28 PM.png" width="500" alt="" />
+      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.56.04 PM.png" width="500" alt="" />
+      -->
+    </figure>
+
     <h2>Crew</h2>
 
     <div>
