--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Style & Code for the Web, by Jim Thoburn
+title: Style &amp; Code for the Web, by Jim Thoburn
 beta_title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
 class: home
 ---
@@ -15,19 +15,7 @@ class: home
 
     <h1>I speak <span style="">design &amp; engineering</span></h1>
 
-    <!--
-    <p>As a member of a team, I can facilitate the process of moving an idea from a sketch to a finish product.</p>
-    -->
-
-    <!--
-    <h1 style="line-height: 1.5;">I speak <b style="line-height: 1.25; border-radius: 0.25em; display: inline-block; padding: 0 0.25em; background: black; color: white;">Design</b> &amp; <b style="line-height: 1.25; border-radius: 0.25em; display: inline-block; padding: 0 0.25em; background: black; color: white;">Engineering</b></h1>
-    <ul class="action">
-      <li><a href="#process">Process</a></li>
-      <li><a href="#services">Services</a></li>
-    </ul>
-    -->
-
-    <p>If you’re making a web site or application, I can assist with <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a>, animation, accessibility, performance, and more! Here are some example projects…</p>
+    <p>If you’re making a website or application, I can assist with <a href="#services">pattern libraries</a>, <a href="#services">responsive design</a>, accessibility, performance, animation, and more! As part of a team, I’ll help facilitate the process of moving an idea from a sketch, to a <a href="#services">prototype</a>, and finally to a finished product. Here are some examples…</p>
 
     <p class="action hello"><a href="#hello">Say hello</a></p>
   </div>
@@ -166,7 +154,7 @@ class: home
 
     <h1 id="hello">Say hello!</h1>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
-    <p>I’m available to help on a web project <!--(or join a team)--> in the fall &amp; winter, 2017. <!--🍃🍂🍁--></p>
+    <p>I’m available to help on a web project or join a team in the fall of 2017. <!--🍃🍂🍁--></p>
 
     <section class="social">
 
