--- a/jj-burns.html
+++ b/jj-burns.html
@@ -27,6 +27,17 @@ title: JJ Burns
       <li><a href="http://jjburns.com/assets/html/patterns/">Pattern library</a></li>
     </ul>
 
+    <figure>
+      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.21.48 PM.png" width="500" alt="" />
+      <!--
+      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.22.03 PM.png" width="500" alt="" />
+      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.22.26 PM.png" width="500" alt="" />
+      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.22.12 PM.png" width="500" alt="" />
+      -->
+      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.22.32 PM.png" width="500" alt="" />
+      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.23.29 PM.png" width="500" alt="" />
+    </figure>
+
     <h2>Crew</h2>
 
     <div>
