--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -32,6 +32,12 @@ title: OK the Store
       <li><a href="http://okthestore.jimthoburn.com">Web Prototypes</a></li>
     </ul>
 
+    <figure>
+      <img src="/images/ok-the-store/Screen Shot 2017-08-26 at 6.16.31 PM.png" width="500" alt="" />
+      <img src="/images/ok-the-store/Screen Shot 2017-08-26 at 6.17.34 PM.png" width="500" alt="" />
+      <img src="/images/ok-the-store/Screen Shot 2017-08-26 at 6.18.29 PM.png" width="500" alt="" />
+    </figure>
+
     <h2>Crew</h2>
 
     <div>
