--- a/good-community.html
+++ b/good-community.html
@@ -30,6 +30,19 @@ title: GOOD Community
       <li><a href="https://goodinc.github.io/citizen-ui/html/patterns/">Pattern library</a></li>
     </ul>
 
+    <figure>
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.03 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.11 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.21 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.28 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.33 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.38 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.46 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.51 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.11.04 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.12.40 PM.png" width="500" alt="" />
+    </figure>
+
     <!--
     <p><img src="/images/projects/good-community.jpg" width="800" alt="The GOOD team" /></p>
     -->
