Update intro and case study.

--- a/good-community.html
+++ b/good-community.html
@@ -31,16 +31,20 @@ title: GOOD Community
     </ul>
 
     <figure>
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.03 PM.png" width="500" alt="" />
+      <a href="https://goodinc.github.io/citizen-ui/"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.33 PM.png" width="500" alt="" /></a>
+      <a href="https://goodinc.github.io/citizen-ui/"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.38 PM.png" width="500" alt="" /></a>
+      <!--
       <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.11 PM.png" width="500" alt="" />
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.21 PM.png" width="500" alt="" />
+      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.03 PM.png" width="500" alt="" />
+      -->
+      <a href="https://goodinc.github.io/citizen-ui/"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.21 PM.png" width="500" alt="" /></a>
+      <!--
       <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.28 PM.png" width="500" alt="" />
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.33 PM.png" width="500" alt="" />
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.38 PM.png" width="500" alt="" />
       <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.46 PM.png" width="500" alt="" />
       <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.51 PM.png" width="500" alt="" />
       <img src="/images/good-community/Screen Shot 2017-08-26 at 6.11.04 PM.png" width="500" alt="" />
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.12.40 PM.png" width="500" alt="" />
+      -->
+      <a href="https://goodinc.github.io/citizen-ui/"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.12.40 PM.png" width="500" alt="" /></a>
     </figure>
 
     <!--
