--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@ class: home
       <use xlink:href="/images/ship.svg#ship"></use>
     </svg>
 
-    <p>Ahoy there! I’m Jim, a user interface developer for the Web, living in Los Angeles.</p>
+    <p>Ahoy there! I’m Jim, a user interface developer for the Web. <!--, living in Los Angeles.--></p>
 
-    <h1>I speak <span style="">design &amp; engineering</span></h1>
+    <p>If you’re making a website or application, I can assist with <a href="#services">pattern libraries</a>, <a href="#services">responsive design</a> and more!  Here are some examples…</p>
 
-    <p>If you’re making a website or application, I can assist with <a href="#services">pattern libraries</a>, <a href="#services">responsive design</a>, accessibility, performance, animation, and more! As part of a team, I’ll help facilitate the process of moving an idea from a sketch, to a <a href="#services">prototype</a>, and finally to a finished product. Here are some examples…</p>
+    <!--
+    <h1>I speak <span style="">design &amp; code</span></h1>
+
+    <p>If you’re making a website or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">pattern libraries</a>, <a href="#services">responsive design</a>, accessibility, performance, animation, and more!</p>
+    -->
+
+    <!--
+    <p> As part of a team, I’ll help facilitate the process of moving an idea from a sketch, to a <a href="#services">prototype</a>, and finally to a finished product. Here are some examples…</p>
+
+      <h2>Example projects</h2>
+    -->
 
     <p class="action hello"><a href="#hello">Say hello</a></p>
+
   </div>
 
   <a href="/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png);">
@@ -154,7 +165,7 @@ class: home
 
     <h1 id="hello">Say hello!</h1>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
-    <p>I’m available to help on a web project or join a team in the fall of 2017. <!--🍃🍂🍁--></p>
+    <p>I’m available to help on a web project in the fall of 2017. <!--🍃🍂🍁--></p>
 
     <section class="social">
 
