--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ class: home
       <use xlink:href="/images/ship.svg#ship"></use>
     </svg>
 
-    <p>Ahoy there! I’m Jim, a user interface developer for the Web. <!--, living in Los Angeles.--></p>
+    <p>Ahoy there! I’m Jim, a user interface developer living in Los Angeles.</p>
 
     <p>If you’re making a website or application, I can assist with <a href="#services">pattern libraries</a>, <a href="#services">responsive design</a> and more!  Here are some examples…</p>
 
