--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ class: home
       <use xlink:href="/images/ship.svg#ship"></use>
     </svg>
 
-    <p>Ahoy there! I’m Jim, a user interface developer living in Los Angeles.</p>
+    <h1 style="font-size: inherit; font-family: inherit; line-height: inherit; margin-top: 1.4em;">Ahoy there! I’m Jim, a user interface developer living in Los Angeles.</h1>
 
-    <p>If you’re making a website or application, I can assist with <a href="#services">pattern libraries</a>, <a href="#services">responsive design</a> and more!  Here are some examples…</p>
+    <p>If you’re making a website or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more!  Here are some examples…</p>
 
     <!--
     <h1>I speak <span style="">design &amp; code</span></h1>
@@ -148,7 +148,7 @@ class: home
         <p>From your ideas, sketches or high-fidelity compositions, I’ll make a fast, lightweight and robust user interface–that’s accessible to anyone in your audience.</p>
       </li>
       <li>
-        <h2>Reusable patterns</h2>
+        <h2>Pattern libraries</h2>
         <p>During the development process, I’ll look for and document <a href="http://styleguides.io">code patterns</a>. You can use these to create additional pages and features for your project in the future.</p>
       </li>
       <!--
