Tweak home page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Style &amp; Code for the Web, by Jim Thoburn
+title: Jim Thoburn, User interface developer for the Web
 beta_title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
 class: home
 ---
@@ -11,9 +11,9 @@ class: home
       <use xlink:href="/images/ship.svg#ship"></use>
     </svg>
 
-    <h1 style="font-size: inherit; font-family: inherit; line-height: inherit; margin-top: 1.4em;">Ahoy there! I’m Jim, a user interface developer living in Los Angeles.</h1>
+    <h1>Ahoy there! I’m Jim, a user interface developer living in Los Angeles.</h1>
 
-    <p>If you’re making a website or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more!  Here are some examples…</p>
+    <p>If you’re making a website or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more!  Here are <span style="display: inline-block">some example projects…</span></p>
 
     <!--
     <h1>I speak <span style="">design &amp; code</span></h1>
@@ -154,11 +154,15 @@ class: home
       <!--
       <li>Server-Side Templates</li>
       <li>
-        <h2>Accessibility &amp; Device Testing</h2>
+        <h2>Other </h2>
         <p></p>
       </li>
       -->
     </ul>
+    <!--
+    <h2>I can also assist with…</h2>
+    <p>accessibility, compatibility, performance, testing, integration with templates, and responsive emails.</p>
+    -->
   </div>
 
   <div class="container">
