--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ class: home
       <use xlink:href="/images/ship.svg#ship"></use>
     </svg>
 
-    <h1>Ahoy there! I’m Jim, a user interface developer living in Los Angeles.</h1>
+    <h1>Ahoy there! I’m Jim, a user interface developer living in <span style="display: inline-block">Los Angeles.</span></h1>
 
     <p>If you’re making a website or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more!  Here are <span style="display: inline-block">some example projects…</span></p>
 
