--- a/food-oasis.html
+++ b/food-oasis.html
@@ -36,6 +36,25 @@ title: Food Oasis Los Angeles
       <li><a href="https://github.com/foodoasisla/site">GitHub Project</a></li>
     </ul>
 
+    <figure>
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.18 AM.png" width="500" alt="" />
+      <!--
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.25 AM.png" width="500" alt="" />
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.42 AM.png" width="500" alt="" />
+      -->
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.47 AM.png" width="500" alt="" />
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.18.01 AM.png" width="500" alt="" />
+      <!--
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.18.13 AM.png" width="500" alt="" />
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.18.59 AM.png" width="500" alt="" />
+      -->
+      <!--
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.19.07 AM.png" width="500" alt="" />
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.19.21 AM.png" width="500" alt="" />
+      -->
+      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.19.27 AM.png" width="500" alt="" />
+    </figure>
+
     <h2>Crew</h2>
 
     <div>
